--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     "SESSION_ID": {
       "description": "put your session ID here in the box below",
       "required": true,
-      "value": ""
+      "value": "Prince~scl/fi/zsil1bypv285vhq4b2we0/uo4n21xHh5.json?rlkey=srnw9hbyv8mreznppppsz82z7&dl=0"
     },
     "BOT_NAME": {
       "description": "put your BOT a name",
@@ -24,7 +24,7 @@
     "OWNER_NUMBER": {
       "description": "put your Number and name for Owner",
       "required": true,
-      "value": "639129985130,DEVELOPER"
+      "value": "237688894829,DEVELOPER"
     },
     "owner_react_emojie": {
       "description": "put one emojie for owner reacts",
